--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.483.0",
     "next": "15.2.1",
