--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.3",
+    "cookies-next": "^5.1.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.1",
     "postcss": "^8.5.3",
